--- a/ClickOnceUninstaller/ClickOnceUninstaller.csproj
+++ b/ClickOnceUninstaller/ClickOnceUninstaller.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{CE6884BE-105D-4B8A-822B-F1282BE4C826}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Wunder.ClickOnceUninstaller</RootNamespace>
-    <AssemblyName>ClickOnceUninstaller</AssemblyName>
+    <RootNamespace>CodeArtEng.ClickOnceUninstaller</RootNamespace>
+    <AssemblyName>CodeArtEng.ClickOnceUninstaller</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -69,7 +69,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClickOnceRegistry.cs" />
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RemoveUninstallEntry.cs" />
     <Compile Include="Uninstaller.cs" />
