--- a/ClickOnceUninstaller/ClickOnceUninstaller.csproj
+++ b/ClickOnceUninstaller/ClickOnceUninstaller.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{CE6884BE-105D-4B8A-822B-F1282BE4C826}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CodeArtEng.ClickOnceUninstaller</RootNamespace>
     <AssemblyName>CodeArtEng.ClickOnceUninstaller</AssemblyName>
@@ -71,6 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClickOnceRegistry.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RemoveUninstallEntry.cs" />
     <Compile Include="Uninstaller.cs" />
